--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="rate2ng"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:label="Rate 2 NG"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
